<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cse437.carmaintainer.NewCarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="ID:"
            android:textColor="@color/myColor"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:ems="3"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/myColor"
            android:textSize="24sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/MakeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/makeText"
            android:textColor="@color/myColor"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/makeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:scrollbarSize="24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/modelText"
            android:textColor="@color/myColor"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/modelSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:scrollbarSize="18dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/yearText"
            android:textColor="@color/myColor"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:scrollbarSize="18dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volumeText"
            android:textColor="@color/myColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/volumeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:inputType="number"
            android:maxEms="7"
            android:maxLength="5"
            android:minEms="5"
            android:textColor="@color/myColor"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/milageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mileageText"
            android:textColor="@color/myColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/distanceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:inputType="number"
            android:maxEms="8"
            android:maxLength="8"
            android:minEms="5"
            android:textColor="@color/myColor"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/doneBtn"
        android:textAllCaps="false"
        android:textColor="@color/myColor"
        android:textSize="18sp" />

</LinearLayout>
